Added contacts.html page. Initialized Couchbase mobile.

--- a/KendoPouchDBApp/index.html
+++ b/KendoPouchDBApp/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -37,9 +37,6 @@
     <ul data-role="listview">
       <li>
         <a href="views/home.html">Home</a>
-      </li>
-      <li>
-        <a href="views/settings.html">Settings</a>
       </li>
       <li>
         <a href="views/contacts.html">Contacts</a>
