Added links to bower components

--- a/KendoPouchDBApp/index.html
+++ b/KendoPouchDBApp/index.html
@@ -10,6 +10,10 @@
     <script src="kendo/js/jquery.min.js"></script>
     <script src="kendo/js/kendo.mobile.min.js"></script>
 
+    <script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+    <script src="bower_components/pouchdb-collate/dist/pouchdb-collate.js"></script>
+    <script src="bower_components/kendo-pouchdb/dist/kendo-pouchdb.min.js"></script>
+
     <script src="scripts/app.js"></script>
 
 </head>
