--- a/KendoPouchDBApp/index.html
+++ b/KendoPouchDBApp/index.html
@@ -6,6 +6,7 @@
     <!--<link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />-->
     <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.408/styles/kendo.common.min.css" />
     <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.408/styles/kendo.common-material.min.css" />
+    <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.408/styles/kendo.material.min.css" />
     <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.408/styles/kendo.mobile.all.min.css" />
     <link href="styles/main.css" rel="stylesheet" />
 
@@ -41,7 +42,8 @@
   <div data-role="drawer" id="appDrawer" style="width: 270px" data-title="Navigation">
     <div data-role="header">
       <div data-role="navbar">
-        <span data-role="view-title"></span>
+          <span data-role="view-title"></span>
+          <span id="popupNotification"></span>
       </div>
     </div>
     <ul data-role="listview">
